<resources>
    <!-- Activity names -->
    <string name="app_name">Movie Club</string>
    <string name="overlay_name">Movie Name</string>

    <!-- Buttons -->
    <string name="action_settings">Settings</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <!-- Tabs -->
    <string name="details_tab">Details</string>
    <string name="trailers_tab">Trailers</string>

    <!-- Error messages -->
    <string name="connection_error">Error trying to request data. Please make sure your device is connected to the internet</string>
    <string name="json_exception">Unable to find movie</string>
    <string name="movie_name_empty">Please insert desired movie title</string>

    <!-- Content authority -->
    <string name="content_authority" translatable="false">com.example.android.movieclub</string>

    <!-- Text views -->
    <string name="movie_name_question">What is the name of the movie?</string>
    <string name="title_activity_details">Movie Details</string>
    <string name="basic_info">Basic Info</string>
    <string name="delete_movie_question">Delete this movie?</string>

    <!-- Infor Labels -->
    <string name="genre_label">Genre:</string>
    <string name="release_label">Release Date:</string>
    <string name="runtime_label">Runtime:</string>
    <string name="actors_label">Actors:</string>
    <string name="director_label">Director:</string>
    <string name="metascore_label">Metascore:</string>
    <string name="imdb_label">Imdb:</string>

    <!-- Info -->
    <string name="added_movie">Movie added to your list</string>
    <string name="removed_movie">Movie removed from your list</string>
    <string name="repeated_movie">You already have this movie in your list</string>
    <string name="app_theme_changed">The app theme will change when you navigate back to the Movie List</string>
    <string name="no_movies">You have no movies in your list</string>
    <string name="no_trailers">This movie has no trailers available</string>
    
    <!-- Preferences options -->
        <!-- App Color -->
            <!-- Labels -->
            <string name="pref_app_color_label">Theme</string>
            <string name="pref_app_color_label_dark">Dark</string>
            <string name="pref_app_color_label_light">Light</string>
            <!-- Keys -->
            <string name="pref_app_color_key" translatable="false">background</string>
            <string name="pref_app_color_value_dark" translatable="false">dark</string>
            <string name="pref_app_color_value_light" translatable="false">light</string>
        <!-- Sort by -->
            <!-- Labels -->
            <string name="pref_sort_by_label">Sort Movies By</string>
            <string name="pref_sort_by_label_insertion">Insertion</string>
            <string name="pref_sort_by_label_alphabetic">A - Z</string>
            <string name="pref_sort_by_label_release">Release Date</string>
            <!-- Keys -->
            <string name="pref_sort_by_key" translatable="false">sort</string>
            <string name="pref_sort_by_value_insertion" translatable="false">insertion</string>
            <string name="pref_sort_by_value_alphabetic" translatable="false">alphabetic</string>
            <string name="pref_sort_by_value_release" translatable="false">release</string>
    
</resources>
